# NSQCuT

./: .gitignore  .zshistory  package-lock.json  package.json  updateConfigs.sh
.github/workflows/: build-windows.yml
src/: index.html  renderer.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: release.json
src-tauri/resources/: nightwatch-qc.desktop
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: addon_manager.rs  game_launcher.rs  mod.rs  settings.rs  voice_window.rs
