[package]
name = "night-watch-updater"
version = "1.0.0"
description = "Addon manager for World of Warcraft"
authors = ["gse orca"]
edition = "2021"

[lib]
name = "night_watch_updater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6.0.0"
indexmap = { version = "2.13.0", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "stream", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2"
tokio = { version = "1.50.0", features = ["full"] }
zip = { version = "8.4.0", features = ["deflate"] }
